# NanoShaper

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_delphilib.txt  CMakeLists_git.txt  CMakeLists_lib.txt  CMakeLists_pybind11.txt  CMakeLists_python.txt  CMakeLists_so.txt  CMakeLists_standalone.txt  Dockerfile  NanoShaper_Docker_VMD.sh  README.md  Readme.txt  runNanoShaperCon2SES_comparison.py  setup.py  setupInstallation.py
.github/workflows/: clang-format-check.yml  cpp-linter.yml  cppcheck.yml
CGALPatch/: Power_test_3.h  Weighted_point.h
doc/: Doxyfile
doc/html/: _blobby_surface_8h.html  _blobby_surface_8h_source.html  _connolly_surface_8h.html  _connolly_surface_8h_source.html  _coulombic_surface_8h.html  _coulombic_surface_8h_source.html  _delphi_shared_8h_source.html  _example_surface_8h.html  _example_surface_8h_source.html  _external_surface_8h.html  _external_surface_8h_source.html  _f_van_der_waals_surface_8h.html  _f_van_der_waals_surface_8h_source.html  _mesh_surface_8h.html  _mesh_surface_8h_source.html  _skin_surface_8h.html  _skin_surface_8h_source.html  _surface_8cpp.html  _surface_8h.html  _surface_8h_source.html  _surface_factory_8h_source.html  annotated.html  class_atom-members.html  class_atom.html  class_atom_info-members.html  class_atom_info.html  class_blobby_surface-members.html  class_blobby_surface.html  class_blobby_surface_register-members.html  class_blobby_surface_register.html  class_configuration-members.html  class_configuration.html  class_connolly_cell-members.html  class_connolly_cell.html  class_connolly_surface-members.html  class_connolly_surface.html  class_connolly_surface_register-members.html  class_connolly_surface_register.html  class_coulombic_surface-members.html  class_coulombic_surface.html  (+80 more)
doc/html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_69.html  all_6c.html  all_6d.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_76.html  all_77.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_6d.html  classes_70.html  classes_73.html  classes_74.html  defines_65.html  files_62.html  files_63.html  files_65.html  files_66.html  files_6d.html  files_73.html  functions_61.html  functions_62.html  functions_63.html  functions_64.html  functions_65.html  functions_66.html  (+21 more)
example/: ArgArg.xyzr  Readme.txt  barstar.xyzr  bunny.xyzr  bunny_conf.prm  conf.prm  conf32.prm  fullerene.xyzr  sphere.xyzr  stanford_bunny.off
example_DelPhi/: 1pyt.prm  1pyt_skin.prm  amber.siz  custom.prm
example_python/: 1pyt_plus.xyzr  1rszH.pdb.xyzr  conf32.prm  example.py
src/: BlobbySurface.cpp  BlobbySurface.h  CMakeLists.txt  Configuration.h  ConnollySurface.cpp  ConnollySurface.h  DelphiShared.cpp  DelphiShared.h  ExampleSurface.cpp  ExampleSurface.h  ExternalSurface.cpp  ExternalSurface.h  MeshSurface.cpp  MeshSurface.h  SkinSurface.cpp  SkinSurface.h  Surface.cpp  Surface.h  SurfaceFactory.cpp  SurfaceFactory.h  globals.h  logging.h  main.cpp  main_functions.cpp  main_functions.h  nanoshaper.cpp  nanoshaper.h  nanoshaper.i  nanoshaper_pybind.cpp  raytracer_datatype.h  tools.cpp  tools.h
src/ConfigFile/: ConfigFile.cpp  ConfigFile.h  Triplet.h  example.cpp  tester.cpp
src/exe/: CMakeLists.txt  main.cpp
src/jama/: jama_cholesky.h  jama_eig.h  jama_lu.h  jama_qr.h  jama_svd.h
src/libraries/: CMakeLists.txt  delphi_lib.cpp
src/octree/: array.h  array2d.h  demo.cpp  numtraits.h  octree.h  octree.tcc  point3d.h  shareddata.h  tinyvector.h
src/ply/: ply.cpp  ply.h
src/python/: CMakeLists.txt  nanoshaper_pybind.cpp
src/sturm/: main.c  solve.h  sturm.cpp  util.cpp
src/tnt/: tnt.h  tnt_array1d.h  tnt_array1d_utils.h  tnt_array2d.h  tnt_array2d_utils.h  tnt_array3d.h  tnt_array3d_utils.h  tnt_cmat.h  tnt_fortran_array1d.h  tnt_fortran_array1d_utils.h  tnt_fortran_array2d.h  tnt_fortran_array2d_utils.h  tnt_fortran_array3d.h  tnt_fortran_array3d_utils.h  tnt_i_refvec.h  tnt_math_utils.h  tnt_sparse_matrix_csr.h  tnt_stopwatch.h  tnt_subscript.h  tnt_vec.h  tnt_version.h
src_client/: compileClient.sh  mainClient.cpp
tests/: ns_test.py  regression_tests.py
tests/1crn_ses/: 1crn_ses_conf.prm
tests/1crn_skin/: 1crn_skin_conf.prm
tests/1vsz_skin/: 1vsz_skin_conf.prm
tests/6xm4_skin/: 6xm4.xyzr  6xm4_skin_conf.prm
